--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,7 @@ assert_cmd = "2.0"
 predicates = "3.1"
 tempfile = "3.10.1"
 
+# from: https://github.com/johnthagen/min-sized-rust
 [profile.release]
 strip = true # Automatically strip symbols from the binary.
+opt-level = "z" # Optimize for size
