--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ tempfile = "3.10.1"
 [profile.release]
 strip = true # Automatically strip symbols from the binary.
 opt-level = "z" # Optimize for size
+lto = true # Link Time Optimization
