--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ predicates = "3.1"
 tempfile = "3.10.1"
 
 # from: https://github.com/johnthagen/min-sized-rust
+# note that these may affect compile time and runtime, might be better to disable
 [profile.release]
-strip = true # Automatically strip symbols from the binary.
-opt-level = "z" # Optimize for size
-lto = true # Link Time Optimization
+#strip = true # Automatically strip symbols from the binary.
+#opt-level = "z" # Optimize for size
+#lto = true # Link Time Optimization
