--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ minijinja = { version = "2.12.0", features = ["loader", "serde"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 serde_yaml = "0.9"
 shellexpand = "3.1"
 tokio = { version = "1", features = ["full"] }
